fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ body{
         text-decoration: none;
     }
     .gallery a {
-        position: relative;
         color: #000;
-        bottom: 40px;
-        left: 150px;
+        position: relative;
+        left: 160px;
+        bottom: 35px;
     }
 
     /*------ Top Container mobile -------*/
@@ -33,16 +33,16 @@ body{
     }
 
     nav {
+        display: flex;
+        justify-content: center;
         margin: 40px 0 25px 0;
     }
 
     nav ul {
-        display: flex;
-        justify-content: center;
         margin-left: 30px;
     }
 
-    nav ul li {
+    nav ul a {
         margin-right: 30px;
     }
 
@@ -56,22 +56,22 @@ body{
     }
 
     .upper h1 {
-        font-size: 1.9em;
-        margin-bottom: 5px;
+        font-size: 1.7em;
+        margin-bottom: 10px;
     }
 
     .upper h2 {
         font-weight: 700;
-        font-size: 1.9em;  
+        font-size: 1.3em;  
         margin-bottom: 20px;
     }
 
     /*------- profile picture mobile -------*/
     .profilepic {
-        margin: 40px 0 0 0;
+        margin: 40px 0;
         justify-self: center;
         border: 3px solid #2c5fa8;
-        background-color: lightslategray;
+        background-color: rgba(150, 150, 150, 1);
         border-radius: 50%;
         height: 110px;
         width: 110px;
@@ -102,17 +102,17 @@ body{
     /*-------- My work gallery mobile -------*/
     .gallery {
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
+        justify-content: center;
+        grid-template-rows: repeat(1fr, 3);
         border-top: 2px solid #fff;
     }
 
     .box {
-        grid-row: span 3;
         color:#000;
         font-family: Montserrat;
         height: 180px;
         margin: 20px 40px;
+        width: 325px;
     }
     
     /*------- items inside gallery boxes mobile -------*/
@@ -120,6 +120,7 @@ body{
         background-color: rgba(150, 150, 150, .7);
         font-size: 1.125em;
         height: 100%;
+        width: 100%;
     }
 
     .inner-text {
@@ -180,26 +181,31 @@ body{
 
 /*----------- DESKTOP SITE ------------*/
 
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 680px) {
 
         /*------ Top Container DESKTOP -------*/
         main {
-            grid-template-rows: 1fr 1fr 20px;
+            grid-template-rows: 1fr 1fr .1px;
         }
 
         nav {
             grid-row: 1 / 2;
+            justify-content: left;
         }
 
         nav ul {
             justify-content: left;
-            margin: 40px 0 40px 80px;
+            margin: 15px 0 40px 80px;
+        }
+
+        nav ul a:hover {
+            border-bottom: 2px solid #2c5fa8;
         }
 
         /*------ Top Container DESKTOP -------*/
         .upper {
             grid-row: 2 / 3;
-            margin: 40px 0 40px 80px;
+            margin: 15px 0 40px 80px;
         }
 
         /*------- profile picture DESKTOP -------*/
@@ -207,33 +213,33 @@ body{
             justify-self: right;
             position: relative;
             right: 80px;  
-            bottom: 105px;  
+            bottom: 145px;  
             height: 150px;
             width: 150px;
         }
 
         /*---- gallery title DESKTOP ------*/
         .gallery-header h5 {
-            border-bottom: 2px solid white;
-            padding-bottom: 30px;  
-            margin: 0 0 40px 0;
+            margin-left: 80px;
         }
 
         /*------ Lower container DESKTOP -------*/
         .lower {
-            padding: 40px 80px;
+            padding: 20px 0 80px 0;
         }
 
         /*-------- My work gallery DESKTOP -------*/
         .gallery {
             display: flex;
-            justify-content: space-evenly;
-            border: none;
-            padding-bottom: 150px;
+            flex-wrap: wrap;
+            justify-content: center;
+            flex-direction: row;
+            padding: 20px 0 150px 0;
+            margin: 0 80px;
         }
 
-        .layer {
-            width: 350px;
+        .gallery a {
+            left: 200px;
         }
 
         /*------- items inside gallery boxes DESKTOP -------*/
@@ -244,7 +250,9 @@ body{
         }
 
         .box {
-            height: 250px;
+
+            height: 225px;
+            width: 375px;
         }
 
          /*------- footer DESKTOP-------*/
